--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <!-- First Parallax Image with Logo Text -->
+    <!-- logo -->
     <div class="bgimg-1">
         <div class="logo-container">
             <img src="assets/images/logo.png" alt="WALL-E Logo" class="logo-image">
@@ -19,8 +19,8 @@
         </div>
     </div>
 
-
-    <div class="container" id="about">
+    <!--about 1-->
+    <div class="container">
         <h3 class="text-center">About Wall-e</h3>
         <p>WALL·E is a 2008 animated science fiction film produced by Pixar Animation Studios and directed by Andrew
             Stanton. Set in the year 2805, the story follows WALL·E, the last remaining robot tasked with cleaning a
@@ -40,7 +40,7 @@
     </div>
 
 
-    <!-- Second Parallax Image with Portfolio Text -->
+    <!-- about 2 -->
     <div class="bgimg-2">
         <div class="axiom-container">
             <h3 class="text-center">Plot</h3>
@@ -79,8 +79,14 @@
         </div>
     </div>
 
+    <!--gallery-->
+    <div class="container">
+        <h2 class="text-center">Gallery</h2>
 
-    <!-- Footer -->
+    </div>
+
+
+    <!-- footer -->
     <footer class="footer text-center">
         &copy;
         <script>
