--- a/index.html
+++ b/index.html
@@ -80,9 +80,16 @@
     </div>
 
     <!--gallery-->
-    <div class="container">
+    <div class="gallery-container">
         <h2 class="text-center">Gallery</h2>
-
+        <div class="gallery-grid">
+            <img src="assets/images/gallery/wallendeve.jpg" alt="Axiom">
+            <img src="assets/images/gallery/MO7.jpg" alt="Background">
+            <img src="assets/images/gallery/passengers.jpg" alt="Lightbulb">
+            <img src="assets/images/gallery/pr-t.jpg" alt="Axiom">
+            <img src="assets/images/gallery/Walle11.jpg" alt="Background">
+            <img src="assets/images/gallery/burne.jpg" alt="Lightbulb">
+          </div>
     </div>
 
 
