--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
 
 <head>
-    <title>wall-e</title>
+    <title>WALL-E</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/main.js"></script>
 </head>
 
 <body>
 
 
-    <!-- logo -->
-    <div class="bgimg-1">
+    <!-- hero and logo -->
+    <main class="bgimg-1">
         <div class="logo-container">
             <img src="assets/images/logo.png" alt="WALL-E Logo" class="logo-image">
             <span>my favorite movie</span>
         </div>
-    </div>
+    </main>
 
     <!--about 1-->
     <div class="container">
@@ -36,7 +37,8 @@
             winning the Academy Award for Best Animated Feature among other accolades. In 2021, it was preserved in the
             National Film Registry for its cultural, historical, and aesthetic significance. In 2022, it was re-released
             by The Criterion Collection in a special 4K Blu-Ray edition, marking a significant milestone as the first
-            Pixar film to receive such an honor. </p>
+            Pixar film to receive such an honor.
+        </p>
     </div>
 
 
@@ -64,17 +66,21 @@
                 can trigger a return to Earth, but it mysteriously disappears, leading to WALL·E and EVE being
                 classified as
                 rogue robots.
-                <br></br>
-                After finding the plant, WALL·E and EVE bring it back to the captain, who realizes humanity must return
-                to
-                Earth and rebuild. However, the ship’s autopilot, AUTO, follows a secret directive to keep humans in
-                space
-                permanently, believing Earth is uninhabitable. WALL·E is severely damaged while trying to help, but the
-                captain overcomes AUTO, and the Axiom returns to Earth. EVE repairs WALL·E, but his memory and
-                personality
-                are lost until a final spark brings him back. Together, WALL·E and EVE help humanity begin restoring
-                Earth
-                to its former glory.
+            </p>
+            <div class="align-center">
+                <button class="btn btn-light-outline" onclick="showMoreplot()" id="morePlotBtn">read more</button>
+            </div>
+            <p id="morePlot">
+            After finding the plant, WALL·E and EVE bring it back to the captain, who realizes humanity must return
+            to
+            Earth and rebuild. However, the ship’s autopilot, AUTO, follows a secret directive to keep humans in
+            space
+            permanently, believing Earth is uninhabitable. WALL·E is severely damaged while trying to help, but the
+            captain overcomes AUTO, and the Axiom returns to Earth. EVE repairs WALL·E, but his memory and
+            personality
+            are lost until a final spark brings him back. Together, WALL·E and EVE help humanity begin restoring
+            Earth
+            to its former glory.
             </p>
         </div>
     </div>
@@ -89,7 +95,7 @@
             <img src="assets/images/gallery/passengers.jpg" alt="Lightbulb">
             <img src="assets/images/gallery/Walle11.jpg" alt="Background">
             <img src="assets/images/gallery/burne.jpg" alt="Lightbulb">
-          </div>
+        </div>
     </div>
 
 
