--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="bgimg-1">
         <div class="logo-container">
             <img src="assets/images/logo.png" alt="WALL-E Logo" class="logo-image">
-            <span>my favorite movie</span>
+            <span class="sub-title">my favorite movie</span>
         </div>
     </main>
 
